[package]
name = "myx_os"
version = "0.1.0"
authors = ["miroox <miroox@outlook.com>"]
edition = "2018"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-curses", "-drive", "format=raw,file={}"]

[dependencies]
bootloader = "0.9.0"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
