[package]
name = "myx_os"
version = "0.1.0"
authors = ["miroox <miroox@outlook.com>"]
edition = "2018"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-curses", "-drive", "format=raw,file={}"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)

[dependencies]
bootloader = "0.9.0"
spin = "0.5.2"
x86_64 = "0.12.3"
uart_16550 = "0.2.10"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
